# video-classfication

./: .gitignore  README.md  Untitled.ipynb  baseline-model-demo.ipynb  config.py  dataset.py  decord.ipynb  ffmpeg.py  main.ipynb  main.py  pyproject.toml  real.ipynb  sussy.ipynb  train.py  train_cnn_lstm.py  train_r3d.py  train_resnet_lstm.py  train_vgg_lstm.py  train_video_mae.py  utils.py
VGG16-CNN/: events.out.tfevents.1749313623.DESKTOP-GAV73Q9.11540.0
models/: __init__.py  cnn_lstm.py  r3d.py  resnet_lstm.py  something.py  vgg_lstm.py
notebooks/: main.ipynb  scratch.ipynb  scratchpad.ipynb
